--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node bin/www",
     "dev": "./node_modules/.bin/nodemon bin/www",
     "prd": "pm2 start bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pm2": "pm2 start .processes.json"
   },
   "dependencies": {
     "async": "^3.1.0",
@@ -16,6 +17,7 @@
     "ejs": "~2.3.3",
     "knex": "^0.19.2",
     "koa": "^2.7.0",
+    "koa-body": "^4.1.1",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
